[package]
authors = ["James Kalyan <michaeljameskalyan@gmail.com>"]
categories = ["command-line-utilities"]
description = "A simple, dynamic value-picker bar inspired by dmenu"
documentation = "https://github.com/mjkalyan/dbar"
edition = "2018"
homepage = "https://github.com/mjkalyan/dbar"
keywords = ["bar", "dmenu", "cli", "simple", "suckless"]
license = "GPL-3.0"
name = "dbar"
readme = "README.org"
repository = "https://github.com/mjkalyan/dbar"
version = "0.1.0"

[dependencies]
sdl2 = ">=0.34.3"
structopt = ">=0.3.13"
